# object_detection

./: .gitignore  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cfg/: color_detector_params.yaml  detector.cfg  detector_low_value.cfg  feature_matching_detector_params.yaml  setup_cirs.sh  shape_detector_params.yaml
data/: box.poly  box_wide.poly  transform.txt  trident_box.poly
doc/: Classes.dia  Doxyfile
evaluation/: defaults.cfg  transform_estimation.py  tuned.cfg
include/object_detection/: alignment.h  alignment.hpp  classifier.h  classifier_factory.h  color_classifier.h  color_detector.h  colored_parts_classifier.h  detection.h  detector.h  feature.h  feature3d.h  feature_extractor.h  feature_extractor_factory.h  feature_matcher.h  feature_matching_detector.h  features_io.h  glcm.h  histogram_backprojection.h  histogram_based_parts_classifier.h  histogram_detector.h  histogram_utilities.h  interest_operator.h  interest_operator_factory.h  mask.h  model3d.h  model3d_alignment.h  model3d_builder.h  model3d_fusion.h  model_builder.h  object_model.h  object_parts_detector.h  parts_classifier.h  pcl_descriptor.h  pose_estimator.h  registration.h  shape_detector.h  shape_matching.h  shape_processing.h  statistics.h  stereo_feature_extractor.h  (+7 more)
include/object_detection/impl/: model3d.hpp  model3d_alignment.hpp  model3d_fusion.hpp
include/odat/: attention_operator.h  conversion_macros.h  db_model_storage.h  detection.h  detector.h  exceptions.h  feature_set.h  feature_set_3d.h  fs_model_storage.h  mask.h  model_storage.h  pose2d.h  pose_estimator.h  serialization_support.h  trainable.h  training_data.h
include/odat_ros/: attention_operator.h  conversions.h  detector_nodelet.h  nodelet_base.h  pose_estimator.h  tabletop_attention_nodelet.h  trainer_server.h  type_conversions.h
launch/: cirs_detection.launch  cirs_training_detection.launch  color_detector.launch  color_shape_detector.launch  detection_display.launch  detection_displays.launch  detection_pipeline.launch  detection_pipeline_debug.launch  detection_pipeline_separate.launch  detection_pool_objects.launch  detection_pool_objects2.launch  detector.launch  detector_test.launch  detector_trainer_display.launch  display.launch  f2_detector_trainer_display.launch  feature_matching_detector.launch  features2d2d_detector.launch  features2d3d_detector.launch  g500_detector.launch  girona_detection.launch  girona_detection_profiler.launch  girona_training_detection.launch  girona_training_detection_gdb.launch  keyboard_training_detection.launch  obj_pose.launch  obj_pose_cam.launch  object_detector.launch  orb_detector.launch  shape_detector.launch  trainer.launch  trainer_and_display.launch  usb_cam.launch  usb_cam_detection.launch  usb_cam_keypoint_namaste.launch  usb_cam_trainer.launch
models-2011-10-19/: README.txt
models-2011-10-19/ColorDetector/: target
models-2011-10-19/ShapeDetector/: target
models/ColorDetector/: target
models/ShapeDetector/: target
octave/: rotmat.m  scalemat.m
src/glcm_extraction/: main.cpp
src/histograms/: main.cpp
src/nodes/: color_shape_detector_node.cpp  detection_display.cpp  detection_display_node.cpp  detection_tracker.cpp  detector.h  detector_node.h  feature_matching_detector_node.cpp  features2d2d_detector_node.cpp  features2d2d_matching_detector_node.cpp  features2d3d_detector_node.cpp  features2d3d_matching_detector_node.cpp  features2d_matching_detector_node.cpp  features3d2d_detector_node.cpp  features3d2d_matching_detector_node.cpp  image_processor.h  incremental_mapping_node.cpp  keypoint_detector_node.cpp  model_fitting_node.cpp  mono_detector.h  mono_detector_node.h  movement_calculator_node.cpp  object_detector_node.cpp  odometer3d_node.cpp  stereo_detector.h  stereo_detector_node.h  stereo_processor.h  stereo_trainer_node.cpp  train_from_disk.cpp  trainer_node.cpp  training_service.h
src/object_detection/: classifier_factory.cpp  clipper.cpp  color_classifier.cpp  color_detector.cpp  colored_parts_classifier.cpp  detection.cpp  detector.cpp  feature_extractor_factory.cpp  feature_matcher.cpp  feature_matching_detector.cpp  glcm.cpp  histogram_backprojection.cpp  histogram_based_parts_classifier.cpp  histogram_detector.cpp  histogram_utilities.cpp  interest_operator_factory.cpp  model3d.cpp  model3d_builder.cpp  model_builder.cpp  object_model.cpp  object_parts_detector.cpp  shape_detector.cpp  shape_matching.cpp  shape_processing.cpp  statistics.cpp  stereo_feature_extractor.cpp  stereo_keypoint_extractor.cpp  surf_extractor.cpp  textured_parts_classifier.cpp  transformation_calculator.cpp  utilities.cpp
src/object_detection_ros/: color_detector_nodelet.cpp  detector_nodelet.cpp  feature_matching_detector_nodelet.cpp  shape_detector_nodelet.cpp
src/object_detection_test/: main.cpp
src/object_detection_tools/: color_detector_trainer.cpp  detector.cpp  trainer.cpp
src/odat/: db_model_storage.cpp  detection.cpp  detector.cpp  fs_model_storage.cpp
src/odat_ros/: attention_operator_nodelet.cpp  conversions.cpp  detector_nodelet.cpp  pose_estimator_nodelet.cpp  trainer_server_nodelet.cpp  type_conversions.cpp
src/odat_ros/tools/: detection_display.cpp
src/pixel_feature_extraction/: main.cpp
src/stereo_extractor/: main.cpp
src/tools/: extract_all.py  feature_quality.cpp  features_to_pcd.cpp  joiner.cpp  sample_distance_threshold_computation.cpp  transformation_error_calculator.cpp  transformation_estimator.cpp
test/: CMakeLists.txt  detector_test.cpp  feature_extractors_test.cpp  glcm_test.cpp  model3d_alignment_test.cpp  model3d_fusion_test.cpp  model3d_test.cpp  model_test.cpp  pcl_descriptor_test.cpp  shape_matching_test.cpp  shape_processing_test.cpp  stereo_feature_extractor_test.cpp  stereo_keypoint_extractor_test.cpp
testdata/: cam_cirs_box.poly  cirs_box.poly  stone.poly  trident_box_wide.poly  uib_logo.poly
